<resources>
    <string name="app_name">Trip4Student</string>
    <string name="connection_title">Connection</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="connection_button">Sign in</string>
    <string name="forgotten_username_password">Forgot Username or Password?</string>
    <string name="create_account">Create an account</string>
    <string name="my_preferences">My preferences</string>
    <string name="travel_themes">Travel themes</string>
    <string name="prefered_accomodations_types">My prefered accomodation\'s types</string>
    <string name="pack_name">Pack name</string>
    <string name="action_settings">Settings</string>
    <string name="forward_path">Forward path</string>
    <string name="return_trip">Return trip</string>
    <string name="departure_place">Departure place</string>
    <string name="departure_place_value">Departure place value</string>
    <string name="book_this_pack_button">Book this pack</string>
    <string name="flight_details_title">Flights</string>
    <string name="flight_details_going">Outward journey</string>
    <string name="flight_details_coming_back">Homeward journey</string>
    <string name="flight_details_info">
        Company : Ryanair
        \nAirport Charles Henry 15 january 2019 6AM, Belgium Brussels
    </string>
    <string name="pack_activity_title">Available activities</string>
    <string name="pack_details_show_activity_fragment">Activities</string>
    <string name="pack_details_show_flights_fragment">Flights</string>
    <string name="pack_details_show_accommodations_fragment">Housing</string>
    <string name="pack_description">"Voyage voyage Au dessus des vieux volcans\n"
                "Glissent des ailes sous les tapis du vent\n"
                "Voyage, voyage\n"
                "Éternellement\n"
                "De nuages en marécages\n"
                "De vent d'Espagne en pluie d'équateur\n"
                "Voyage, voyage\n"
                "Vole dans les hauteurs\n"
                "Au dessus des capitales\n"
                "Des idées fatales\n"
                "Regardent l'océan"</string>
    <string name="pack_booking_nb_travelers">Number of travelers</string>
    <string name="flight_seats_booking_title">Choose your seats</string>
    <string name="book_housing_rooms_title">Choose your bedrooms</string>
    <string name="book_paying_activities_title">Select your activities</string>
    <string name="flight_booking_flight_info">Paris - London</string>
    <string name="booking_plane_seat_info">A5 First class 200€</string>
    <string name="booking_wrong_nb_of_travelers_input">Invalid number of travelers</string>
    <string name="booking_negative_nb_of_travelers_input">The number of travelers cannot be less than 1</string>
    <string name="booking_activities_activity_info">Act name and price</string>
    <string name="hotel_booking_info">Info hotel booking</string>
    <string name="room_size">3</string>
    <string name="room_size_label"> beds</string>
    <string name="room_price"> - 90 €</string>
    <string name="flight_departure_and_destination">Departure - Destination</string>
    <string name="flight_departure">Departure</string>
    <string name="flight_arrival">Arrival</string>
    <string name="add_to_my_bookings_button">Add to my bookings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_a_number_of_traveler">Please enter the number of travelers</string>
    <string name="booking_activities_general_info">* The number of activities added to the booking depends on the number of travelers
    \n* Only the paying activities are being displayed above</string>
    <string name="comment_text">Comment text placeholder</string>
    <string name="comment_section_title">Comment section</string>
    <string name="my_bookings_section_title">My bookings</string>
    <string name="comment_hint">Write a comment</string>
    <string name="comment_is_empty">Your comment is empty</string>
    <string name="delete_comment_button">Delete my comment</string>
    <string name="accommodation_list_title">Housing</string>
    <string name="accommodation_name">Accommodation name</string>
    <string name="accommodation_description">Accommodation description</string>
    <string name="locality">Locality</string>
    <string name="favourite_activity_tag_title">My favourite activity types</string>
    <string name="favourite_housing_type">My favourite housing types</string>
    <string name="apartment">Apartment</string>
    <string name="SHARED_PREF_FILE_KEY">SharedPref</string>
    <string name="ACTI_TAG_PREF_1">ActTag1</string>
    <string name="ACTI_TAG_PREF_2">ActTag2</string>
    <string name="ACTI_TAG_PREF_3">ActTag3</string>
    <string name="acti_tag_pref_limit">*Maximum 3 activities selected</string>
    <string name="load_more_button">-> More packs</string>
    <string name="email_address">Email address</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="can_not_be_empty">This field can\'t be empty</string>
    <string name="min_character_username">Must contain at least 6 characters</string>
    <string name="min_character_name">Must contain at least 2 characters</string>
    <string name="can_not_contain_digit">This field can not contain any digit</string>
    <string name="can_not_contain_special_character">This field can not contain special character</string>
    <string name="must_be_email">This field must match with an email address</string>
    <string name="min_character_password">Password must contain at least 8 characters</string>
    <string name="password_must_contain_digit">Password must contain at least one digit</string>
    <string name="password_must_contain_capital_letter">Password must contain at least one capital letter</string>
    <string name="password_must_contain_small_letter">Password must contain at least one small letter</string>
    <string name="must_match_password">This field must match with password</string>
    <string name="error_during_sign_up">An error occurred while creating your account</string>
    <string name="email_or_username_already_exists">Your email address already exists</string>
    <string name="registration_successful">Registration successful, logging you in</string>
    <string name="wrong_account_information">Wrong account information</string>
    <string name="invalid_account_information">Invalid login information</string>
    <string name="ACCESS_TOKEN">ACCESS_TOKEN</string>
    <string name="email">Email address</string>
    <string name="button_sign_up">Sign up</string>
    <string name="internal_server_error">Server error</string>
    <string name="no_connection">You are not connected to internet</string>
    <string name="scroll_down_for_more">Scroll down to see more</string>
    <string name="reservation_successful">Reservation successful !</string>
    <string name="reservation_unsuccessful">Problem during the reservation</string>
    <string name="my_account">My account</string>
    <string name="my_username">My username</string>
    <string name="about_me">About me</string>
    <string name="comment_creation_failed">Failed saving your comment</string>
</resources>
