<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/flights_info_recycler_parent"
    android:layout_marginBottom="25sp">

    <TextView
        android:id="@+id/flight_departure_and_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flight_departure_and_destination"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="start"
        android:text="@string/flight_departure"
        android:textColor="@color/text_color"
        android:layout_marginTop="7dp"
        android:layout_marginStart="5sp"/>

    <TextView
        android:id="@+id/departure_flight_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:text="@string/flight_details_info" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="left"
        android:text="@string/flight_arrival"
        android:layout_marginStart="5sp"
        android:textColor="@color/text_color"
        android:layout_marginTop="7dp"/>

    <TextView
        android:id="@+id/arrival_flight_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:text="@string/flight_details_info"
        />

</LinearLayout>