<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.fragmentMyPreferences"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="@drawable/sky">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@drawable/activity_item_squared_corner"
        android:gravity="center"
        android:text="@string/about_me"
        android:textColor="@color/text_title"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="vertical"
        android:layout_weight="90"
        android:layout_margin="12sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/activity_item_rounded_corner">
            <TextView
                android:id="@+id/activity_tags_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourite_activity_tag_title"
                android:layout_margin="5sp"
                android:textSize="22sp"
                android:layout_gravity="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activity_tags_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/acti_tag_pref_limit"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10sp"
            android:background="@drawable/activity_item_rounded_corner">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_gravity="center"
                android:text="@string/my_account"
                android:textColor="@color/text_title"
                android:textSize="22sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp">
                <ImageView
                    android:id="@+id/my_profile_picture"
                    android:layout_width="125sp"
                    android:layout_height="125sp"
                    tools:srcCompat="@tools:sample/avatars" />
                <TextView
                    android:id="@+id/my_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_username"
                    android:textSize="20sp"
                    android:layout_marginTop="30sp"
                    android:layout_marginStart="15sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>