<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/room_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_size"
        android:textSize="20sp"
        android:padding="5sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/room_size_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/room_size_label"
        android:textSize="20sp"
        android:maxLength="25"
        app:layout_constraintStart_toEndOf="@id/room_size"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/booking_room_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_price"
        android:textSize="20sp"
        android:padding="5sp"
        app:layout_constraintStart_toEndOf="@id/room_size_label"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/booking_room_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15sp"
        android:buttonTint="@color/checkbox_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>