<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <TextView
            android:id="@+id/pack_details_pack_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:fontFamily="@font/galada"
            android:gravity="center"
            android:text="@string/pack_name"
            android:textColor="@color/text_title"
            android:textSize="22sp"
            android:background="@drawable/activity_item_squared_corner"/>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="92"
            android:layout_marginTop="6sp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/pack_details_scrollview_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/pack_details_pack_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pack_description"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="15sp"
                    android:textColor="@color/text_color"
                    android:padding="5sp"
                    android:layout_marginStart="12sp"
                    android:layout_marginEnd="12sp"
                    android:background="@drawable/activity_item_squared_corner"/>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/pack_details_fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/pack_details_show_flights_fragment">


                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/pack_details_show_accommodations_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="12dp"
                    android:text="@string/pack_details_show_accommodations_fragment"
                    android:textSize="12sp"
                    android:textColor="@color/text_color"
                    app:layout_constraintStart_toEndOf="@+id/pack_details_show_flights_fragment"
                    app:layout_constraintTop_toBottomOf="@id/pack_details_pack_description" />

                <Button
                    android:id="@+id/pack_details_show_activity_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/pack_details_show_activity_fragment"
                    android:textSize="12sp"
                    android:textColor="@color/text_color"
                    app:layout_constraintEnd_toStartOf="@+id/pack_details_show_flights_fragment"
                    app:layout_constraintTop_toBottomOf="@id/pack_details_pack_description" />

                <Button
                    android:id="@+id/pack_details_show_flights_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:text="@string/pack_details_show_flights_fragment"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pack_details_pack_description" />

                <Button
                    android:id="@+id/pack_details_book_this_pack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/book_this_pack_button"
                    android:textColor="@color/text_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pack_details_fragment_container"
                    android:layout_marginBottom="20sp"
                    android:layout_marginTop="8sp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>