<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:id="@+id/choose_options_for_booking_pack_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:fontFamily="@font/galada"
        android:gravity="center"
        android:text="@string/pack_name"
        android:textSize="22sp"
        android:background="@drawable/activity_item_squared_corner"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="92"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12sp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_number_travelers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColorHint="@color/hint_color" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/booking_options_nb_travelers"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:hint="@string/pack_booking_nb_travelers"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:textColor="@color/hint_color"
                    android:width="190sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/flight_seats_booking_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flight_seats_booking_title"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/book_plane_seats_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="@drawable/activity_item_rounded_corner"/>

            <TextView
                android:id="@+id/book_housing_rooms_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_housing_rooms_title"
                android:textSize="20sp"
                android:layout_marginTop="5sp"
                android:layout_gravity="center"
                android:gravity="center" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/book_housing_rooms_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/activity_item_rounded_corner"
                android:layout_marginTop="5sp"/>

            <TextView
                android:id="@+id/book_paying_activities_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_paying_activities_title"
                android:layout_marginTop="5sp"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/book_paying_activities_rv"
                android:layout_marginTop="5sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/activity_item_rounded_corner"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>